--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -1,99 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<% include header%>     
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Bench-Press</title>
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="css/bootstrapResources/workoutsCSS/bootstrap-theme.min.css">
-
-    <link rel="stylesheet" href="/css/bootstrapResources/workoutsCSS/bootstrap-social.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
-    <!--css -->
-    <link rel="stylesheet" href="css/bootstrapResources/workoutsCSS/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/custom_shivansh.css">
-
-    <!--JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-    <script src="js/custom_shivansh.js"></script>
-
-    <!--Fonts-->
-    <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/other-resources/font-awesome-4.7.0/css/font-awesome.css">
-
-    <!--custom css -->
-    <style>
-        body {
-            font-family: 'Oswald', sans-serif;
-        }
-    </style>
-
-</head>
-
-<body>
-
-    <div id="custom-navbar">
-        <div class="container">
-            <div class="row row1">
-                <ul class="largenav pull-left">
-                    <div>
-                        <li class="upper-links"><a class="links" href="">Nutrition</a></li>
-                        <li class="upper-links"><a class="links" href="">Gain Plans</a></li>
-                        <li class="upper-links"><a class="links" href="">Workouts</a></li>
-                        <li class="upper-links"><a class="links" href="">Store</a></li>
-                        <li class="upper-links"><a class="links" href="">Articles</a></li>
-                        <li class="upper-links"><a class="links" href="">About</a></li>
-                    </div>
-
-                </ul>
-                <ul class="largenav pull-right">
-                    <div>
-                        <li class="upper-links">
-                            <a class="links" href="http://google.in/">
-                        <svg class="" width="16px" height="12px" style="overflow: visible;">
-                            <path d="M8.037 17.546c1.487 0 2.417-.93 2.417-2.417H5.62c0 1.486.93 2.415 2.417 2.415m5.315-6.463v-2.97h-.005c-.044-3.266-1.67-5.46-4.337-5.98v-.81C9.01.622 8.436.05 7.735.05 7.033.05 6.46.624 6.46 1.325v.808c-2.667.52-4.294 2.716-4.338 5.98h-.005v2.972l-1.843 1.42v1.376h14.92v-1.375l-1.842-1.42z" fill="#fff"></path>
-                        </svg>
-                    </a>
-                        </li>
-                        <li class="upper-links dropdown"><a class="links" href="">Username</a>
-                            <ul class="dropdown-menu">
-                                <li class="profile-li"><a class="profile-links" href="">Profile</a></li>
-                                <li class="profile-li"><a class="profile-links" href="">Change Password</a></li>
-                                <li class="profile-li"><a class="profile-links" href="">History</a></li>
-                                <li class="profile-li"><a class="profile-links" href="">Track</a></li>
-                                <li class="profile-li"><a class="profile-links" href="">Help</a></li>
-                                <br>
-                                <li class="profile-li"><a class="profile-links" href="">Sign out</a></li>
-                            </ul>
-                        </li>
-                    </div>
-                </ul>
-            </div>
-            <div class="row row2">
-                <div id="navbarRow2" class="col-sm-2">
-                    <img id="navbar-image" src="/images/site-wide-resources/bulqup-icon.png">
-                </div>
-                <div class="custom-navbar-search smallsearch col-sm-8 col-xs-11">
-                    <div class="row">
-                        <input class="custom-navbar-input col-xs-11" type="" placeholder="Search for workouts, products and more" name="">
-                        <button class="custom-navbar-button col-xs-1">
-                        <svg width="15px" height="15px">
-                            <path d="M11.618 9.897l4.224 4.212c.092.09.1.23.02.312l-1.464 1.46c-.08.08-.222.072-.314-.02L9.868 11.66M6.486 10.9c-2.42 0-4.38-1.955-4.38-4.367 0-2.413 1.96-4.37 4.38-4.37s4.38 1.957 4.38 4.37c0 2.412-1.96 4.368-4.38 4.368m0-10.834C2.904.066 0 2.96 0 6.533 0 10.105 2.904 13 6.486 13s6.487-2.895 6.487-6.467c0-3.572-2.905-6.467-6.487-6.467 "></path>
-                        </svg>
-                    </button>
-                    </div>
-                </div>
-                <div class="cart largenav col-sm-2">
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <!--<h1 id="content1"> <%= objpassed[0].workoutName %> </h1>-->
+    <!--<h2 id="content2"> <%= objpassed[0].workoutName %> </h2>-->
+    <!--<h3 id="content3"> <%= objpassed[0].workoutName %> </h3>-->
 
     <!-- Page Content -->
     <div class="container">
@@ -101,7 +10,8 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Bench-Press
+                <h1 class="page-header">Bench Press
+                    <!--<%= objpassed[0].workoutName %>-->
                     <small><small>Chest</small></small>
                 </h1>
             </div>
@@ -112,7 +22,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <object data="http://www.youtube.com/embed/esQi683XR44" width="700" height="393"></object>
+                <object data="https://www.youtube.com/embed/esQi683XR44" width="700" height="393"></object>
             </div>
 
             <div class="col-md-4">
@@ -232,74 +142,5 @@
 
 <br></br>
 <hr>
-<footer>
-    <div class="footer" style="background-color:#222;foreground-color:white;border-color:#FFFFFF;color:#FFFFFF;">
-        <div class="container">
-            <div class="row">
 
-
-
-                <div>
-                    <div class="col-md-4">
-                        <h3> Bulqup </h3>
-                        <div class="footer-links">
-                            <li> <a href="#"> Home </a> </li>
-                            <li> <a href="#"> About Bulqup </a> </li>
-                            <li> <a href="#"> Advertise with us </a> </li>
-                            <li> <a href="#"> Store </a> </li>
-                            <li> <a href="#"> FAQ</a> </li>
-
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 footer">
-                        <h3> Contact us </h3>
-                        <div class="footer-links">
-                            <li> <a href="#"> Need help </a> </li>
-                            <li> <a href="#"> Contact form </a> </li>
-                            <li> <a href="#"> Suggestions </a> </li>
-
-                        </div>
-
-                    </div>
-                    <div class="col-md-4 footer">
-
-                        <img style="position:relative; left:-30px; " ; src="/images/site-wide-resources/bulqup-icon.png">
-                        <div class="footer-links">
-                            <a class="btn btn-social-icon btn-twitter">
-                            <span class="fa fa-twitter"></span>
-                        </a>
-                            <a class="btn btn-social-icon btn-facebook">
-                            <span class="fa fa-facebook"></span>
-                        </a>
-                            <a class="btn btn-social-icon btn-instagram">
-                            <span class="fa fa-instagram"></span>
-                        </a>
-                            <a class="btn btn-social-icon btn-github">
-                            <span class="fa fa-github"></span>
-                        </a>
-                        </div>
-                    </div>
-
-                </div>
-                <!--/.row-->
-
-            </div>
-            <!--/.container-->
-            <hr>
-        </div>
-        <!--/.footer-->
-
-
-        <div class="footer-bottom">
-            <div class="container" style="background-color:rgba(0,0,0,.2);foreground-color:white;border-color:#337ab7;color:#FFFFFF;">
-
-                <p align="center"> Copyright © 2017 Bulqup. MIT License.</p>
-
-            </div>
-        </div>
-        <!--/.footer-bottom-->
-</footer>
-</div>
-
-</html>
+<% include footer%>     
