--- a/views/workoutTemplate.ejs
+++ b/views/workoutTemplate.ejs
@@ -1,5 +1,7 @@
 <% include header%>     
 
+<h1>You're in  <%= objpassed.workoutName %></h1>
+
     <!-- Page Content -->
     <div class="container">
 
@@ -17,7 +19,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <object data="http://www.youtube.com/embed/esQi683XR44" width="700" height="393"></object>
+                <object data="https://www.youtube.com/embed/esQi683XR44" width="700" height="393"></object>
             </div>
 
             <div class="col-md-4">
