--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Bench-Press</title>
+    <link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
+    <title>Workout</title>
    
-    <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
-
     <!-- Optional theme -->
-    <link rel="stylesheet" href="css/bootstrapResources/workoutsCSS/bootstrap-theme.min.css">
-
+    <link rel="stylesheet" href="/css/bootstrapResources/workoutsCSS/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/bootstrapResources/workoutsCSS/bootstrap-social.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!--css -->
-    <link rel="stylesheet" href="css/bootstrapResources/workoutsCSS/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/custom_shivansh.css">
+    <link rel="stylesheet" href="/css/bootstrapResources/workoutsCSS/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 
     <!--JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="/js/custom_shivansh.js"></script>
+    <script src="/js/workoutTemplate.js"></script>
     
-    <script src="js/custom_shivansh.js"></script>
-
     <!--Fonts-->
-    <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/other-resources/font-awesome-4.7.0/css/font-awesome.css">
+    <!--<link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="/other-resources/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" >
 
     <!--custom css -->
     <style>
         body {
-            font-family: 'Oswald', sans-serif;
+            font-family: 'Roboto', sans-serif;
+            /*font-family: 'Oswald', sans-serif;*/
         }
     </style>
 
 </head>
 
-<body>
+<section>
 
     <div id="custom-navbar">
         <div class="container">
@@ -98,3 +97,5 @@
             </div>
         </div>
     </div>
+    
+</section>
