--- a/views/dbadd.ejs
+++ b/views/dbadd.ejs
@@ -1,4 +1,4 @@
-<% include header%> 
+<% include partials/header%> 
 
 <div class="container">
 	<h1>Submit Data to DB:</h1>
@@ -123,6 +123,6 @@
 
 <script src="js/submitToDb.js"></script>
 
-<% include footer%> 
+<% include partials/footer%> 
 
 <!--onclick="submitDataToDB()"-->
