--- a/views/new_homepage.ejs
+++ b/views/new_homepage.ejs
@@ -49,7 +49,7 @@
         <div class="container">
           <h1 class="masthead-heading mb-0">The Best Way</h1>
           <h2 class="masthead-subheading mb-0">To Bulk Up</h2>
-          <a href="/workout" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+          <a href="/workouts" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
