--- a/views/workoutTemplate.ejs
+++ b/views/workoutTemplate.ejs
@@ -1,15 +1,16 @@
-<% include header%>     
+<% include partials/header%>     
 
-<h1>You're in  <%= objpassed.workoutName %></h1>
+<!--<h1>You're in  <%= objpassed.workoutName %></h1>-->
 
+<body>
     <!-- Page Content -->
     <div class="container">
 
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Bench-Press
-                    <small><small>Chest</small></small>
+                <h1 class="page-header"><%= objpassed.workoutName %>
+                    <small><small><%=objpassed.QuickFacts.MusclesWorked%></small></small>
                 </h1>
             </div>
         </div>
@@ -19,7 +20,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <object data="https://www.youtube.com/embed/esQi683XR44" width="700" height="393"></object>
+                <object data=<%=objpassed.videoLink%> width="700" height="393"></object>
             </div>
 
             <div class="col-md-4">
@@ -27,12 +28,12 @@
                     <h3>Quick-Facts:</h3>
 
                     <ul>
-                        <li>Main muscle worked: Chest</li>
-                        <li>Type: Strength</li>
-                        <li>Skill Level: Intermediate</li>
+                        <li>Main muscle worked: <%=objpassed.QuickFacts.MusclesWorked%></li>
+                        <li>Type: <%=objpassed.QuickFacts.WorkoutType%></li>
+                        <li>Skill Level: <%=objpassed.QuickFacts.SkillLevel%></li>
                         <li>
                             <h5> General Remarks:</h5>
-                            <p> This is a compound excercise that uses Bench and standard-strength rod
+                            <p> <%=objpassed.QuickFacts.GeneralRemark%>
                             </p>
                         </li>
                     </ul>
@@ -43,21 +44,20 @@
                 <div>
                     <h3>Workout:</h3>
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default">-</button>
-                        <button type="button" class="btn btn-default">&#9733 Medium</button>
-                        <button type="button" class="btn btn-default">+</button>
+                        <button type="button" class="btn btn-default" onclick="levelchanged(this, <%=objpassed.WorkoutLoad.EasyCount%>)" id = 1>-</button>
+                        <button type="button" class="btn btn-default" onclick="levelchanged(this, <%=objpassed.WorkoutLoad.MediumCount%>)" id = 2>&#9733 Medium</button>
+                        <button type="button" class="btn btn-default" onclick="levelchanged(this, <%=objpassed.WorkoutLoad.HardCount%>)" id = 3>+</button>
                     </div>
 
                     <br></br>
 
                     <ul>
-
-                        <li>Reommended Reps: 10</li>
-                        <li>Recommended Sets: 3</li>
+                        <li>Reommended Reps: <span id="repcountID">5</span></li>
+                        <li>Recommended Sets: <span id="setCountID">5</span></li>
                     </ul>
                 </div>
 
-                <h2>&#9733 8.5/10</h2>
+                <h2>&#9733 <%=objpassed.Rating%>/10</h2>
             </div>
         </div>
         <!-- /.row -->
@@ -69,28 +69,29 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Workout Instructions:<i>(Edit)</i></h3>
+                <h3 class="page-header">Workout Instructions:<i></i></h3>
             </div>
 
             <div class="col-lg-6 col-xs-12">
 
                 <ol>
-                    <li>Lie back on a flat bench with feet firm on the floor. Using a wide, pronated (palms forward) grip that is around 3 inches away from shoulder width (for each hand), lift the bar from the rack and hold it straight over you with your arms locked. The bar will be perpendicular to the torso and the floor. This will be your starting position.</li>
-                    <li>As you breathe in, come down slowly until you feel the bar on your middle chest.</li>
-                    <li>After a second pause, bring the bar back to the starting position as you breathe out and push the bar using your chest muscles. Lock your arms and squeeze your chest in the contracted position, hold for a second and then start coming down slowly again. Tip: It should take at least twice as long to go down than to come up.</li>
-                    <li>Repeat the movement for the prescribed amount of repetitions.</li>
+                    <li><%=objpassed.workoutInstructions[0]%></li>
+                    <li><%=objpassed.workoutInstructions[1]%></li>
+                    <li><%=objpassed.workoutInstructions[2]%></li>
+                    <li><%=objpassed.workoutInstructions[3]%></li>
+                    
                 </ol>
                 <h3>Tips:</h3>
                 <ol>
-                    <li>If you are new at this exercise, it is advised that you use a spotter. If no spotter is available, then be conservative with the amount of weight used.</li>
-                    <li>Also, beware of letting the bar drift too far forward. You want the bar to fall on your middle chest and nowhere else.
-                    </li>
-                    <li>Don't bounce the weight off your chest. You should be in full control of the barbell at all times.</li>
-
+                    <li><%=objpassed.tips[0]%></li>
+                    <li><%=objpassed.tips[1]%></li>
+                    <li><%=objpassed.tips[2]%></li>
+                    <li><%=objpassed.tips[3]%></li>
+                    
                 </ol>
             </div>
-            <div class="col-lg-6 col-xs-12">
-                <img src="/images/workouts/bench-press/bench.jpg ">
+            <div class="col-lg-6 col-xs-12" style="left: -50px;">
+                <img src=<%=objpassed.imagelink%> >
             </div>
 
         </div>
@@ -140,4 +141,4 @@
 <br></br>
 <hr>
 
-<% include footer%>     
+<% include partials/footer%>     
