--- a/views/workoutTemplate.ejs
+++ b/views/workoutTemplate.ejs
@@ -100,37 +100,37 @@
         <!-- /.row -->
 
         <!-- Related Projects Row -->
-        <div class="row">
+        <!--<div class="row">-->
 
-            <div class="col-lg-12">
-                <h3 class="page-header">Related Workouts:</h3>
-            </div>
+        <!--    <div class="col-lg-12">-->
+        <!--        <h3 class="page-header">Related Workouts:</h3>-->
+        <!--    </div>-->
 
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
+        <!--    <div class="col-sm-3 col-xs-6">-->
+        <!--        <a href="#">-->
+        <!--            <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">-->
+        <!--        </a>-->
+        <!--    </div>-->
 
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
+        <!--    <div class="col-sm-3 col-xs-6">-->
+        <!--        <a href="#">-->
+        <!--            <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">-->
+        <!--        </a>-->
+        <!--    </div>-->
 
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
+        <!--    <div class="col-sm-3 col-xs-6">-->
+        <!--        <a href="#">-->
+        <!--            <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">-->
+        <!--        </a>-->
+        <!--    </div>-->
 
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
+        <!--    <div class="col-sm-3 col-xs-6">-->
+        <!--        <a href="#">-->
+        <!--            <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">-->
+        <!--        </a>-->
+        <!--    </div>-->
 
-        </div>
+        <!--</div>-->
         <!-- /.row -->
         <hr>
     </div>
