--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,6 +36,16 @@
         }
     </style>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123039640-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-123039640-1');
+    </script>
+
 </head>
 
 <section>
