adding posts, resources, new header, footer, adding disqus

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,26 +5,27 @@
                 <p>© 2017 Bulqup, MIT License</p>
             </div>
         	<div class="col-md-4 footer-nav animated fadeInUp">
-            	<h4>Menu</h4>
-            	<div class="col-md-6">
-                    <ul class="pages">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Store</a></li>
-                        <li><a href="#">Apps</a></li>
-                        <li><a href="#">Donate</a></li>
+            	<h4 class="col-md-1 footer-titles">Menu</h4>
+            	<br>
+            	<div class="col-md-5">
+                    <ul class="col-md-1">
+                        <ul><a class="footer-alinks pages" href="#">Home</a></ul>
+                        <ul><a class="footer-alinks pages" href="/about">About</a></ul>
+                        <ul><a class="footer-alinks pages" href="#">Store</a></ul>
+                        <ul><a class="footer-alinks pages" href="#">Apps</a></ul>
+                        <ul><a class="footer-alinks pages" href="#">Donate</a></ul>
                     </ul>
                 </div>
             	<div class="col-md-6">
                     <ul class="list">
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Terms & Condition</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <ul><a class="footer-alinks pages" href="#">FAQ</a></ul>
+                        <ul><a class="footer-alinks pages" href="#">Terms & Condition</a></ul>
+                        <ul><a class="footer-alinks pages" href="#">Privacy Policy</a></ul>
                     </ul>
                 </div>
             </div>
         	<div class="col-md-2 footer-social animated fadeInDown">
-            	<h4>Follow Us</h4>
+            	<h4 class="footer-titles">Follow Us</h4>
             	<ul>
                 	<li><a href="#">Facebook</a></li>
                 	<li><a href="#">Twitter</a></li>
@@ -33,7 +34,7 @@
                 </ul>
             </div>
         	<div class="col-md-3 footer-ns animated fadeInRight">
-            	<h4>Newsletter</h4>
+            	<h4 class="footer-titles">Newsletter</h4>
                 <p>Wanna be a fam? Enter your email here!</p>
                 <p>
                     <div class="input-group">
@@ -48,4 +49,10 @@
     </footer>
 </div>
 
+	 <!--jQuery Plugins -->
+	<script src="/js/newHomepage/jquery.min.js"></script>
+	<script src="/js/newHomepage/bootstrap.min.js"></script>
+	<script src="/js/newHomepage/jquery.stellar.min.js"></script>
+	<script src="/js/newHomepage/main.js"></script>
+</body>
 </html>
