--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,15 +25,16 @@
     
     <!--Fonts-->
     <!--<link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
     <link href="/other-resources/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" >
 
     <!--custom css -->
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
+        /*body {*/
+        /*    font-family: 'Roboto', sans-serif;*/
             /*font-family: 'Oswald', sans-serif;*/
-        }
+        /*}*/
     </style>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -55,12 +56,12 @@
             <div class="row row1">
                 <ul class="largenav pull-left">
                     <div>
-                        <li class="upper-links"><a class="links" href="">Nutrition</a></li>
-                        <li class="upper-links"><a class="links" href="">Gain Plans</a></li>
-                        <li class="upper-links"><a class="links" href="">Workouts</a></li>
-                        <li class="upper-links"><a class="links" href="">Store</a></li>
-                        <li class="upper-links"><a class="links" href="">Articles</a></li>
-                        <li class="upper-links"><a class="links" href="">About</a></li>
+                        <li class="upper-links"><a class="links" style="font-family: Tahoma, Geneva, sans-serif" href="">Nutrition</a></li>
+                        <li class="upper-links"><a class="links" style="font-family: Tahoma, Geneva, sans-serif" href="">Gain Plans</a></li>
+                        <li class="upper-links"><a class="links" style="font-family: Tahoma, Geneva, sans-serif" href="">Workouts</a></li>
+                        <li class="upper-links"><a class="links" style="font-family: Tahoma, Geneva, sans-serif" href="">Store</a></li>
+                        <li class="upper-links"><a class="links" style="font-family: Tahoma, Geneva, sans-serif" href="">Articles</a></li>
+                        <li class="upper-links"><a class="links" style="font-family: Tahoma, Geneva, sans-serif" href="">About</a></li>
                     </div>
 
                 </ul>
