--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -49,6 +49,19 @@
 	.footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
 }
 
+.footer-alinks {
+	font-size: 11px;
+	color: rgba(255,255,255,1.00);
+	position: relative;
+    padding-bottom: 15px; 
+	position: relative;
+	text-transform: uppercase;
+}	 
+
+.footer-titles{
+	color:  white;
+}
+
 
 
 /*old footer code
