--- a/views/routeNotFound.ejs
+++ b/views/routeNotFound.ejs
@@ -1,4 +1,50 @@
-<% include partials/header%>     
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+	<title>Bulqup!</title>
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="/css/newHome/newHomepageBootstrap.min.css">
+	<!--<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />-->
+
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="/css/newHome/font-awesome.min.css">
+	
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="/css/newHome/newHomepage.css"/>
+	<link type="text/css" rel="stylesheet" href="/css/footer.css" />
+	
+
+	<!-- Custom stlylesheet -->
+	<!--<link type="text/css" rel="stylesheet" href="css/style.css" />-->
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
+</head>
+
+<body>
+	<!-- HEADER -->
+	<header id="header" style="background-color: #222;">
+		<!-- NAV -->
+		<% include partials/newHeader%>
+		<!-- /NAV -->
+	</header>
+	<!-- /HEADER -->   
 
 <body>
     <!-- Page Content -->
@@ -7,7 +53,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Page Not Found
+                <h1 style="padding: 50px">Page Not Found
                 </h1>
                 <p>We're sorry but the page you requested doesn't exist</p>
                 <a href="workouts"><button type="button" class="btn btn-danger">Redirect</button></a>
