--- a/views/workoutTemplate.ejs
+++ b/views/workoutTemplate.ejs
@@ -1,15 +1,54 @@
-<% include partials/header%>     
+<!DOCTYPE html>
+<html lang="en">
 
-<!--<h1>You're in  <%= objpassed.workoutName %></h1>-->
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+	<title>5x5 Workout</title>
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="/css/newHome/newHomepageBootstrap.min.css">
+	<!--<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />-->
+
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="/css/newHome/font-awesome.min.css">
+	
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="/css/newHome/newHomepage.css"/>
+	<link type="text/css" rel="stylesheet" href="/css/footer.css" />
+	
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
+</head>
 
 <body>
+	<!-- HEADER -->
+	<header id="header" style="background-color: #222;">
+		<!-- NAV -->
+		<% include partials/newHeader%>
+		<!-- /NAV -->
+		
+	</header>
+
     <!-- Page Content -->
     <div class="container">
 
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header"><%= objpassed.workoutName %>
+                <h1 class="page-header-wo"><%= objpassed.workoutName %>
                     <small><small><%=objpassed.QuickFacts.MusclesWorked%></small></small>
                 </h1>
             </div>
@@ -72,7 +111,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Workout Instructions:<i></i></h3>
+                <h3 class="page-header-wo">Workout Instructions:<i></i></h3>
             </div>
 
             <div class="col-lg-6 col-xs-12">
