--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -1,4 +1,47 @@
-<% include partials/header%>   
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+	<title>5x5 Workout</title>
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="/css/newHome/newHomepageBootstrap.min.css">
+	<!--<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />-->
+
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="/css/newHome/font-awesome.min.css">
+	
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="/css/newHome/newHomepage.css"/>
+	<link type="text/css" rel="stylesheet" href="/css/footer.css" />
+	
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
+</head>
+
+<body>
+	<!-- HEADER -->
+	<header id="header" style="background-color: #222;">
+		<!-- NAV -->
+		<% include partials/newHeader%>
+		<!-- /NAV -->
+		
+	</header>
+	<!-- /HEADER -->
     <body>
     <!-- Page Content -->
     <div class="container">
