adding facebook page link and fixing home link

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
             	<br>
             	<div class="col-md-5">
                     <ul class="col-md-1">
-                        <ul><a class="footer-alinks pages" href="#">Home</a></ul>
+                        <ul><a class="footer-alinks pages" href="/">Home</a></ul>
                         <ul><a class="footer-alinks pages" href="/about">About</a></ul>
                         <ul><a class="footer-alinks pages" href="#">Store</a></ul>
                         <ul><a class="footer-alinks pages" href="#">Apps</a></ul>
@@ -27,7 +27,7 @@
         	<div class="col-md-2 footer-social animated fadeInDown">
             	<h4 class="footer-titles">Follow Us</h4>
             	<ul>
-                	<li><a href="#">Facebook</a></li>
+                	<li><a href="https://www.facebook.com/BULQUP">Facebook</a></li>
                 	<li><a href="#">Twitter</a></li>
                 	<li><a href="#">Instagram</a></li>
                 	<li><a href="#">RSS</a></li>
