--- a/views/partials/newHeader.ejs
+++ b/views/partials/newHeader.ejs
@@ -6,7 +6,7 @@
 			<div class="container">
 				<!-- social -->
 				<ul class="nav-social">
-					<li><a href="#"><i style="color: #fff;" class="fa fa-facebook"></i></a></li>
+					<li><a href="https://www.facebook.com/BULQUP"><i style="color: #fff;" class="fa fa-facebook"></i></a></li>
 					<li><a href="#"><i style="color: #fff;" class="fa fa-twitter"></i></a></li>
 					<li><a href="#"><i style="color: #fff;" class="fa fa-google-plus"></i></a></li>
 					<li><a href="#"><i style="color: #fff;" class="fa fa-instagram"></i></a></li>
@@ -265,7 +265,7 @@
 		<!-- Aside Nav -->
 		<div id="nav-aside">
 			<ul class="nav-aside-menu">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li class="has-dropdown"><a>Categories</a>
 					<ul class="dropdown">
 						<li><a href="#">Lifestyle</a></li>
