--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
+	<!--google analytics meta-->
+	<meta name="google-site-verification" content="TwboIiuxiqL6w0sJ1u8xhZ5KK88EdElSgpmanEUDtNo" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
