fixing fonts, links, sitemap

--- a/views/partials/newHeader.ejs
+++ b/views/partials/newHeader.ejs
@@ -200,7 +200,7 @@
 						<!--</div>-->
 					</li>
 					<li class="has-dropdown megamenu">
-						<a style="color: #fff;" href="#">Workouts</a>
+						<a style="color: #fff;" href="/workouts">Workouts</a>
 						<!--<div class="dropdown">-->
 						<!--	<div class="dropdown-body">-->
 						<!--		<div class="row">-->
