--- a/views/articles/5x5.ejs
+++ b/views/articles/5x5.ejs
@@ -19,6 +19,7 @@
 
 	<!-- Font Awesome Icon -->
 	<link rel="stylesheet" href="/css/newHome/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="/css/newHome/newHomepage.css"/>
@@ -30,6 +31,11 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+	<style>
+	    body {
+            font-family: 'Roboto', sans-serif;
+        }
+	</style>
 
 </head>
 
