--- a/views/workoutTemplate.ejs
+++ b/views/workoutTemplate.ejs
@@ -19,6 +19,7 @@
 
 	<!-- Font Awesome Icon -->
 	<link rel="stylesheet" href="/css/newHome/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="/css/newHome/newHomepage.css"/>
@@ -30,6 +31,11 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+	<style>
+	    body {
+            font-family: 'Roboto', sans-serif;
+        }
+	</style>
 
 </head>
 
@@ -56,7 +62,7 @@
         <!-- /.row -->
 
         <!-- Seller Information -->
-        <div class="row">
+        <div class="row" style="padding: 25px 25px 0px 25px">
             <div class="col-md-8 embed-responsive embed-responsive-16by9 hidden-lg hidden-md">
               <iframe class="embed-responsive-item" src= <%=objpassed.videoLink%> width="100%" allowfullscreen></iframe>
             </div>
@@ -67,7 +73,7 @@
 
             <div class="col-md-4">
                 <div>
-                    <h3>Quick-Facts:</h3>
+                    <h3 class="page-header-wo">Quick-Facts:</h3>
 
                     <ul>
                         <li>Main muscle worked: <%=objpassed.QuickFacts.MusclesWorked%></li>
@@ -99,7 +105,7 @@
                     </ul>
                 </div>
 
-                <h2>&#9733 <%=objpassed.Rating%>/10</h2>
+                <h2 style="padding-top: 25px">&#9733 <%=objpassed.Rating%>/10</h2>
             </div>
         </div>
         <!-- /.row -->
@@ -108,13 +114,13 @@
 
 
         <!-- Item Information Row -->
-        <div class="row">
+        <div class="row" style="padding: 0px 25px 25px 25px">
 
             <div class="col-lg-12">
                 <h3 class="page-header-wo">Workout Instructions:<i></i></h3>
             </div>
 
-            <div class="col-lg-6 col-xs-12">
+            <div class="col-lg-6 col-xs-12" style="padding: 15px">
 
                 <ol>
                     <li><%=objpassed.workoutInstructions[0]%></li>
@@ -123,7 +129,7 @@
                     <li><%=objpassed.workoutInstructions[3]%></li>
                     
                 </ol>
-                <h3>Tips:</h3>
+                <h3 class="page-header-wo">Tips:</h3>
                 <ol>
                     <li><%=objpassed.tips[0]%></li>
                     <li><%=objpassed.tips[1]%></li>
