--- a/views/partials/newHeader.ejs
+++ b/views/partials/newHeader.ejs
@@ -276,7 +276,7 @@
 					</ul>
 				</li>
 				<li><a href="/about">About Us</a></li>
-				<li><a href="contact.html">Contacts</a></li>
+				<li><a href="/">Contacts</a></li>
 				<li><a href="#">Advertise</a></li>
 			</ul>
 			<button class="nav-close nav-aside-close"><span></span></button>
