--- a/views/articles/how-to-get-the-best-sleep.ejs
+++ b/views/articles/how-to-get-the-best-sleep.ejs
@@ -8,7 +8,7 @@
 	<link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>5x5 Workout</title>
+	<title>How to get the best night sleep?</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
