--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,15 +63,15 @@
 				<div class="col-md-8 hot-post-left">
 					<!-- post -->
 					<div class="post post-thumb">
-						<a class="post-img" href="articles/5x5"><img src="images/newHome/hot-post-1.jpg" alt=""></a>
+						<a class="post-img" href="articles/ultimate-guide-to-gain-mass"><img src="images/newHome/header1.jpg" alt=""></a>
 						<div class="post-body">
 							<div class="post-category">
 								<a href="category.html">Workout</a>
 							</div>
-							<h3 class="post-title title-lg"><a href="articles/5x5">The 5x5 workout plan</a></h3>
+							<h3 class="post-title title-lg"><a href="articles/ultimate-guide-to-gain-mass">The Ultimate Gude to Gain Mass</a></h3>
 							<ul class="post-meta">
-								<li><a href="author.html">Minjun Kim</a></li>
-								<li>14 September 2018</li>
+								<li><a href="author.html">Shiv Suhane</a></li>
+								<li>11 February, 2019</li>
 							</ul>
 						</div>
 					</div>
@@ -80,12 +80,12 @@
 				<div class="col-md-4 hot-post-right">
 					<!-- post -->
 					<div class="post post-thumb">
-						<a class="post-img" href="/articles/how-to-get-the-best-sleep"><img src="images/newHome/hot-post-2.jpg" alt=""></a>
+						<a class="post-img" href="/articles/5x5"><img src="images/newHome/hot-post-1.jpg" alt=""></a>
 						<div class="post-body">
 							<div class="post-category">
 								<a href="category.html">Lifestyle</a>
 							</div>
-							<h3 class="post-title"><a href="/articles/how-to-get-the-best-sleep">How to get the best night sleep?</a></h3>
+							<h3 class="post-title"><a href="/articles/5x5">Bulqup's 5x5: The ultimate mass gainer workout</a></h3>
 							<ul class="post-meta">
 								<li><a href="author.html">Minjun Kim</a></li>
 								<li>14 September 2018</li>
@@ -170,23 +170,23 @@
 
 						<div class="clearfix visible-md visible-lg"></div>
 
-						 <!--post -->
-						<!--<div class="col-md-6">-->
-						<!--	<div class="post">-->
-						<!--		<a class="post-img" href="blog-post.html"><img src="./img/post-4.jpg" alt=""></a>-->
-						<!--		<div class="post-body">-->
-						<!--			<div class="post-category">-->
-						<!--				<a href="category.html">Health</a>-->
-						<!--			</div>-->
-						<!--			<h3 class="post-title"><a href="blog-post.html">Postea senserit id eos, vivendo periculis ei qui</a></h3>-->
-						<!--			<ul class="post-meta">-->
-						<!--				<li><a href="author.html">John Doe</a></li>-->
-						<!--				<li>20 April 2018</li>-->
-						<!--			</ul>-->
-						<!--		</div>-->
-						<!--	</div>-->
-						<!--</div>-->
-						 <!--/post -->
+						
+						<div class="col-md-6">
+							<div class="post">
+								<a class="post-img" href="/articles/how-to-get-the-best-sleep"><img src="images/newHome/hot-post-2.jpg" alt=""></a>
+								<div class="post-body">
+									<div class="post-category">
+										<a href="category.html">Lifestyle</a>
+									</div>
+									<h3 class="post-title"><a href="/articles/how-to-get-the-best-sleep">How to get the best night sleep?</a></h3>
+									<ul class="post-meta">
+										<li><a href="author.html">Minjun Kim</a></li>
+										<li>18 September 2018</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					
 
 						 <!--post -->
 						<!--<div class="col-md-6">-->
